# rust-practice

./: .gitignore
basic_file_server/: Cargo.toml  test_transfer.sh
basic_file_server/.cargo/: config.toml
basic_file_server/src/: client.rs  lib.rs  main.rs  server.rs
basic_server_client/: Cargo.toml
basic_server_client/src/: client.rs  main.rs  server.rs
bazel-rust-demo/: BUILD.bazel  Cargo.toml  MODULE.bazel  justfile
bazel-rust-demo/src/: main.rs
control_flow/: Cargo.toml
control_flow/src/: main.rs
enum_option_match/: Cargo.toml
enum_option_match/src/: main.rs
guessing_game/.cargo/: config.toml
guessing_game/src/: main.rs
hello_world/: hello_world
ownership/src/: main.rs
proto_rust_demo/: Cargo.toml  build.rs  justfile
proto_rust_demo/src/: lib.rs  main.rs
slices/src/: main.rs
structured_data/src/: main.rs
